# elastic-search-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml
elastic_search_lib/: __init__.py  services.py
elastic_search_lib/domain/: quote_mappings.py
elastic_search_lib/service_layer/: services.py
src/: setup.py
src/elastic/: config.py
src/elastic.egg-info/: PKG-INFO  SOURCES.txt
src/elastic/adapters/repository/: repository_index.py
src/elastic/domain/mappings/: quote.py
src/elastic/domain/model/: model_index.py
src/elastic/entrypoints/: dependencies.py  fastapi_app.py
src/elastic/entrypoints/routers/: routers.py
src/elastic/service_layer/: services.py
src/elastic_search_lib/domain/: model.py
src/elastic_search_lib/service_layer/: services.py
tests/: conftest.py  test_unit.py
