[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "elastic-search-lib"
version = "0.1.1"
authors = [
  { name="Sergey Listov", email="slistov@mail.ru" },
]
description = "Elastic API for searching"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/slistov/elastic-search-lib"
"Bug Tracker" = "https://github.com/slistov/elastic-search-lib/issues"