[metadata]
name = elastic-search-lib
description = Elasticsearch API library.
long_description_content_type = text/markdown
url = https://github.com/slistov/elastic-search-lib
project_urls =
    Bug Tracker = https://github.com/slistov/elastic-search-lib/issues
    Changelog = https://github.com/slistov/elastic-search-lib/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point